# create-python-app

./: main.py  pyproject.toml
src/fastapi/: .env  Dockerfile  Makefile  config.py  main.py  models.py  pyproject.toml  requirements.txt
src/fastapi/routers/: auth.py  schemas.py  user.py  utils.py
