[tool.poetry]
name = "create-python-app"
version = "0.1.0"
description = ""
authors = ["Devansh3712 <devanshamity@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^3.1.3"
rich = "^13.3.5"
halo = "^0.0.31"

[tool.poetry.scripts]
create-python-app = "main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
